\name{diffHicnews}
\title{diffHic News}
\encoding{UTF-8}

\section{Version 1.1.1}{\itemize{
\item
Added library size specification to DIList methods normalize(), asDGEList().

\item 
Fixed bugs under pathological settings in plotPlaid(), plotDI(), rotPlaid(), rotDI().

\item 
Optimized C++ code for connectCounts(), squareCounts().

\item 
Streamlined various R utilities used throughout all functions.

\item 
Updated documentation, tests and user's guide.
}}

\section{Version 1.0.0}{\itemize{
\item 
New package \code{diffHic}, for detection of differential interactions from Hi-C data.
}}