@@ -1,6 +1,6 @@
 
-R Under development (unstable) (2014-12-14 r67167) -- "Unsuffered Consequences"
-Copyright (C) 2014 The R Foundation for Statistical Computing
+R version 3.2.0 (2015-04-16) -- "Full of Ingredients"
+Copyright (C) 2015 The R Foundation for Statistical Computing
 Platform: x86_64-unknown-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -23,36 +23,11 @@ Type 'q()' to quit R.
 > suppressWarnings(suppressPackageStartupMessages(require(diffHic)))
 > suppressPackageStartupMessages(require(edgeR))
 > 
-> .getLimits <- function(x, flank, start, end) {
-+ 	lower.x <- x - flank
-+ 	upper.x <- x + flank
-+ 	if (lower.x < start) { upper.x <- upper.x + start - lower.x }
-+ 	if (upper.x > end) { lower.x <- lower.x + end - upper.x }
-+ 	lower.x <- max(start, lower.x)
-+ 	upper.x <- min(upper.x, end)
-+ 	return(c(lower.x, upper.x))
-+ }
-> 
 > # Defining some odds and ends.
 > 
 > lower.left <- function(x) { 
 + 	out <- matrix(TRUE, nrow=nrow(x), ncol=ncol(x))
 + 	out[nrow(x),1] <- FALSE
-+ 	out
-+ }
-> upper.right <- function(x) { 
-+ 	out <- matrix(TRUE, nrow=nrow(x), ncol=ncol(x))
-+ 	out[1, ncol(x)] <- FALSE
-+ 	out
-+ }
-> upper.left <- function(x) { 
-+ 	out <- matrix(TRUE, nrow=nrow(x), ncol=ncol(x))
-+ 	out[1,1] <- FALSE
-+ 	out	
-+ }
-> lower.right <- function(x) { 
-+ 	out <- matrix(TRUE, nrow=nrow(x), ncol=ncol(x))
-+ 	out[nrow(x), ncol(x)] <- FALSE
 + 	out
 + }
 > all.but.middle <- function(x) {
@@ -213,4 +188,4 @@ Type 'q()' to quit R.
 > 
 > proc.time()
    user  system elapsed 
- 10.607   0.179  10.781 
+ 11.362   0.225  15.409 
