@@ -2,7 +2,7 @@
 #include "coord.h"
 
 SEXP count_patch(SEXP all, SEXP bin, SEXP filter, SEXP firstbin, SEXP lastbin) try {
-    if (!isInteger(bin)) { throw std::runtime_error("anchor bin indices must be integer vectors"); }
+	if (!isInteger(bin)) { throw std::runtime_error("anchor bin indices must be integer vectors"); }
 	const int* bptr=INTEGER(bin)-1; // Assuming 1-based indices for anchors and targets.
 	if (!isInteger(filter) || LENGTH(filter)!=1) { throw std::runtime_error("filter value must be an integer scalar"); }
 	const int f=asInteger(filter);
@@ -12,31 +12,34 @@ SEXP count_patch(SEXP all, SEXP bin, SEXP filter, SEXP firstbin, SEXP lastbin) t
 	const int fbin=asInteger(firstbin);
 	if (!isInteger(lastbin) || LENGTH(lastbin)!=1) { throw std::runtime_error("index of first bin on target chromosome must be an integer scalar"); }
 	const int lbin=asInteger(lastbin);
-	if (!isNewList(all)) { throw std::runtime_error("data on interacting PETs must be contained within a list"); }
 
 	// Setting up other structures, including pointers. We assume it's sorted on R's side.
+	if (!isNewList(all)) { throw std::runtime_error("data on interacting read pairs must be contained within a list"); }
 	const int nlibs=LENGTH(all);
-    std::deque<const int*> aptrs(nlibs), tptrs(nlibs);
+	std::deque<const int*> aptrs(nlibs), tptrs(nlibs);
 	std::deque<int> nums(nlibs), indices(nlibs);
 	std::priority_queue<coord, std::deque<coord>, std::greater<coord> > next;
-    
+	
 	for (int i=0; i<nlibs; ++i) {
-        SEXP current=VECTOR_ELT(all, i);
-        if (!isNewList(current) || LENGTH(current)!=2) { 
+		SEXP current=VECTOR_ELT(all, i);
+		if (!isNewList(current) || LENGTH(current)!=2) { 
 			throw std::runtime_error("interactions must be supplied as a data.frame with anchor.id and target.id"); }
 
-        for (int j=0; j<2; ++j) {
-            SEXP current_col=VECTOR_ELT(current, j);
-            if (!isInteger(current_col)) { throw std::runtime_error("interaction data must be in integer format"); }
-            int* ptr=INTEGER(current_col);
-            switch (j) {
-                case 0: 
+		for (int j=0; j<2; ++j) {
+			SEXP current_col=VECTOR_ELT(current, j);
+			if (!isInteger(current_col)) { throw std::runtime_error("interaction data must be in integer format"); }
+			const int* ptr=INTEGER(current_col);
+			switch (j) {
+				case 0: 
 					aptrs[i]=ptr; 
 					nums[i]=LENGTH(current_col);
 					break;
-                case 1: tptrs[i]=ptr; break;
-                default: break;
-            }
+				case 1: 
+					tptrs[i]=ptr; 
+					if (LENGTH(current_col)!=nums[i]) { throw std::runtime_error("vectors should be the same length"); }		
+					break;
+				default: break;
+			}
 		}
 		
 		// Populating the priority queue.
@@ -72,7 +75,7 @@ SEXP count_patch(SEXP all, SEXP bin, SEXP filter, SEXP firstbin, SEXP lastbin) t
 				waschanged.push_back(curdex);
 				ischanged[curdex]=true;
 				curdex*=nlibs;
- 			    for (lib=0; lib<nlibs; ++lib) { curcounts[curdex+lib]=0; }
+ 				for (lib=0; lib<nlibs; ++lib) { curcounts[curdex+lib]=0; }
 			} else {
 				curdex*=nlibs;
 			}
@@ -83,7 +86,7 @@ SEXP count_patch(SEXP all, SEXP bin, SEXP filter, SEXP firstbin, SEXP lastbin) t
 				int& libdex=indices[curlib];
 				++(curcounts[curdex+curlib]);
 				next.pop();
- 	           	if ((++libdex) < nums[curlib]) {
+ 			 	if ((++libdex) < nums[curlib]) {
 					next.push(coord(bptr[aptrs[curlib][libdex]], bptr[tptrs[curlib][libdex]], curlib));
 				} else if (next.empty()) { 
 					failed=true;
